# tg-quranbot

./: .0pdd.yml  .codeclimate.yml  .editorconfig-checker.json  .env.example  .gitignore  .gitmodules  .gotemir.yaml  .pdd  .pdm-python  .revive-code-bot.yml  .rultor.yml  .yaspellerrc  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  Taskfile.yml  alembic.ini  cspell.json  cspell_custom_words.txt  docker-compose.yml  lint_sql.py  prometheus.yml  pyproject.toml  renovate.json  setup.cfg  yoyo.ini
.github/: .env
.github/workflows/: changes-tested.yml  deploy.yml  installing-dependencies.yml  lint.yml  master.yml  pr-check.yml  python-app.yml  release.yml  update-wps.yml  weekly-check.yml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  (+220 more)
deploy/: cron.d  event_reciever_supervisor.conf  quranbot_nginx.conf  restart.sh  revive_code_bot_nginx.conf  supervisor.conf
docs/: README.md  api.md  ayats.md  db_schema_specification.md  glossary.md  mailings.md  mutation_coverage.md  podcasts.md  prayers.md  registration.md  unused_code.md  updates_log.md
elixir_app/: Dockerfile.elixir  README_ELIXIR.md  mix.exs
elixir_app/config/: config.exs
elixir_app/docs/: migration_guide.md
infra/: docker-compose.prod.yml  prometheus.yml  promtail-config.yml
migrations/: 20230815_01_7ALQG.rollback.sql  20230815_01_7ALQG.sql  20230826_01_RChAw-change-chat-id-type.rollback.sql  20230826_01_RChAw-change-chat-id-type.sql  20230830_01_neA0R-remove-days-table-step-1.rollback.sql  20230830_01_neA0R-remove-days-table-step-1.sql  20230830_02_QXaRV-remove-days-table-step-3.rollback.sql  20230830_02_QXaRV-remove-days-table-step-3.sql  20230915_01_Cv22v-podcast-reactions.rollback.sql  20230915_01_Cv22v-podcast-reactions.sql  20231018_01_zsY9W-fix-favorite-typo.rollback.sql  20231018_01_zsY9W-fix-favorite-typo.sql  20240318_01_D8Zfn-using-timezones.rollback.sql  20240318_01_D8Zfn-using-timezones.sql  20240607_01_PlBa5-prayer-at-user-unique-together.rollback.sql  20240607_01_PlBa5-prayer-at-user-unique-together.sql  20240706_01_VaxTE-remove-defaults.rollback.sql  20240706_01_VaxTE-remove-defaults.sql  20240930_01_pdRsM-ru-ayat-sound.rollback.sql  20240930_01_pdRsM-ru-ayat-sound.sql  20250107_01_JfEav-namaz-today-prayers copy.rollback.sql  20250107_01_JfEav-namaz-today-prayers.rollback.sql  20250107_01_JfEav-namaz-today-prayers.sql  20250108_02_3qKdF-prayers-unique.rollback.sql  20250108_02_3qKdF-prayers-unique.sql  20250505_01_iSXs4-halal-guide-cities.rollback.sql  20250505_01_iSXs4-halal-guide-cities.sql
src/: cli.py  constants.py  db.py  event_recieve.py  exceptions.py  main.py  manage.py  quranbot_answer.py  schedule_app.py  scheduler_entry.py  settings.py  states.py  utlls.py
src/app/: __init__.py  main.py
src/app_types/: AsyncIntOrNone.py  AsyncSupportsBool.py  AsyncSupportsStr.py  FkAsyncIntOrNone.py  FkAsyncStr.py  FkUpdate.py  ThroughString.py  UnwrappedString.py  answerable.py  async_date.py  async_date_time.py  async_int_or_none.py  async_supports_bool.py  async_supports_str.py  cached_async_int.py  counter.py  date_time.py  dictable.py  fk_async_int.py  fk_async_int_or_none.py  fk_async_listable.py  fk_async_str.py  fk_float.py  fk_log_sink.py  fk_runable.py  fk_string.py  fk_update.py  floatable.py  intable.py  listable.py  logger.py  mailing_interface.py  millis.py  rounded_float.py  runable.py  stringable.py  supports_bool.py  sync_runable.py  unwrapped_string.py  update.py
src/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/db/: base.py  connection.py  meta.py  schema_migration.py
src/exceptions/: __init__.py  base_exception.py  content_exceptions.py  internal_exceptions.py  prayer_exceptions.py  user.py
src/handlers/: MessageNotFoundSafeAnswer.py  PodcastMessageTextNotExistsSafeAnswer.py  PrayerNames.py  PrayersStatistic.py  SkippedPrayersKeyboard.py  __init__.py  button_handlers.py  command_handlers.py  common.py  concrete_podcast_answer.py  decrement_skipped_prayer_answer.py  favorites_answer.py  favourites_answer.py  full_start_answer.py  hg_prayer_time_answer.py  location.py  message_handlers.py  next_day_ayats.py  nt_city_names.py  nt_prayer_time_answer.py  nt_search_city_answer.py  paginate_by_search_ayat.py  pagination_per_day_prayer_answer.py  pg_prayer_time_answer.py  pg_search_city_answer.py  pg_set_user_city_answer.py  podcast_answer.py  podcast_message_text_not_exists_safe_answer.py  podcast_reaction_change_answer.py  prayer_names.py  prayer_reaction_change_answer.py  prayer_time_answer.py  prayers_statistic.py  prayers_statistic_answer.py  random_podcast_answer.py  register.py  search_ayat_by_keyword_answer.py  search_ayat_by_numbers_answer.py  search_city_answer.py  search_handler.py  (+4 more)
src/integrations/: NominatimCityName.py  __init__.py  city_name.py  city_name_by_id.py  client.py  nats_integration.py  nominatim.py  nominatim_city_name.py  schemas.py
src/main/: __init__.py  admin.py  algorithms.py  apps.py  exceptions.py  models.py  service.py  views.py
src/metrics/: __init__.py  measured_answer.py  prometheus.py
src/repository/: admin_message.py  ayats.py  city.py  mailing.py  podcast.py  prayer_time.py  schemas.py  update_log.py  user.py  user_actions.py  user_prayers_interface.py  user_registration_repository.py
src/services/: ChatIdDebugParam.py  (+57 more)
tests/: test_define_files.py
(+1868 files in other folders)
